--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,15 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# plugin name
-plugin_name = example-plugin
+plugin_name = rusher-utils
 
-# plugin version
-plugin_version = 1.0.0
+plugin_version = 0.1
 
-maven_group = org.example
+maven_group = dev.otter
 
-# use java 17 for minecraft versions 1.20.4 and older
-# use java 21 for minecraft versions 1.20.5 and newer
 java_version = 17
 
-# minecraft version to compile with
-# other supported versions of the game can be added in rusherhack-plugin.json
 minecraft_version = 1.20.1
 
-# parchment mappings
-parchment_version = 1.20.1:2023.09.03
+parchment_version = 1.20.1:2023.07.30
 
-# fabric loader version
-fabric_loader_version = 0.16.9
+fabric_loader_version = 0.16.10
